Updated maven and made some settings